--- a/cv/index.html
+++ b/cv/index.html
@@ -19,28 +19,28 @@
     <section id="servicios">
         <h1>Have a look at my Services</h1>
         <article>
-            <img src="images/s1.webp" alt="Web Design">
+            <img src="img//s1.webp" alt="Web Design">
             <h2><a href="#">Web Design</a></h2>
             <p>
                 Lorem ipsum <strong>esto es strong</strong> elit. Nostrum, libero quae distinctio, <em>tambien con em</em> id repellat <i>itálica</i> atque quia, illo iure aliquam cupiditate laudantium? Corrupti <sub>Sub</sub> magnam aliquid porro illo excepturi <sup>Super</sup> enim quae?
             </p>
         </article>
         <article>
-            <img src="images/s2.webp" alt="Mobile Design">
+            <img src="img//s2.webp" alt="Mobile Design">
             <h2><a href="#">Mobile Design</a></h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, libero quae distinctio, id repellat atque quia, illo iure aliquam cupiditate laudantium? Corrupti magnam aliquid porro illo excepturi blanditiis enim quae?
             </p>
         </article>
         <article>
-            <img src="images/s3.webp" alt="Print Design">
+            <img src="img//s3.webp" alt="Print Design">
             <h2><a href="#">Print Design</a></h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, libero quae distinctio, id repellat atque quia, illo iure aliquam cupiditate laudantium? Corrupti magnam aliquid porro illo excepturi blanditiis enim quae?
             </p>
         </article>
         <article>
-            <img src="images/s4.webp" alt="Interaction Design">
+            <img src="img//s4.webp" alt="Interaction Design">
             <h2><a href="#">Interaction Design</a></h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, libero quae distinctio, id repellat atque quia, illo iure aliquam cupiditate laudantium? Corrupti magnam aliquid porro illo excepturi blanditiis enim quae?
@@ -56,10 +56,16 @@
     <section id="contacto">
         <h1>Latest Done Projects</h1>
         <figure>
-            <img src="images/l1.webp" alt="Panda" >
+            <img src="img/l1.webp" alt="Panda">
             <figcaption>Pie de imagen</figcaption>
         </figure>
     </section>
+    <iframe 
+        width="400" 
+        height="200" 
+        src="https://www.youtube.com/embed/0yruvXjYoUo" 
+        frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <footer>
 
     </footer>
