--- a/cv/index.html
+++ b/cv/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>FrontEnd Developer</title>
 </head>
+
 <body>
     <header>
         <nav>
@@ -22,28 +24,36 @@
             <img src="img//s1.webp" alt="Web Design">
             <h2><a href="#">Web Design</a></h2>
             <p>
-                Lorem ipsum <strong>esto es strong</strong> elit. Nostrum, libero quae distinctio, <em>tambien con em</em> id repellat <i>itálica</i> atque quia, illo iure aliquam cupiditate laudantium? Corrupti <sub>Sub</sub> magnam aliquid porro illo excepturi <sup>Super</sup> enim quae?
+                Lorem ipsum <strong>esto es strong</strong> elit. Nostrum, libero quae distinctio, <em>tambien con
+                    em</em> id repellat <i>itálica</i> atque quia, illo iure aliquam cupiditate laudantium? Corrupti
+                <sub>Sub</sub> magnam aliquid porro illo excepturi <sup>Super</sup> enim quae?
             </p>
         </article>
         <article>
             <img src="img//s2.webp" alt="Mobile Design">
             <h2><a href="#">Mobile Design</a></h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, libero quae distinctio, id repellat atque quia, illo iure aliquam cupiditate laudantium? Corrupti magnam aliquid porro illo excepturi blanditiis enim quae?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, libero quae distinctio, id repellat
+                atque quia, illo iure aliquam cupiditate laudantium? Corrupti magnam aliquid porro illo excepturi
+                blanditiis enim quae?
             </p>
         </article>
         <article>
             <img src="img//s3.webp" alt="Print Design">
             <h2><a href="#">Print Design</a></h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, libero quae distinctio, id repellat atque quia, illo iure aliquam cupiditate laudantium? Corrupti magnam aliquid porro illo excepturi blanditiis enim quae?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, libero quae distinctio, id repellat
+                atque quia, illo iure aliquam cupiditate laudantium? Corrupti magnam aliquid porro illo excepturi
+                blanditiis enim quae?
             </p>
         </article>
         <article>
             <img src="img//s4.webp" alt="Interaction Design">
             <h2><a href="#">Interaction Design</a></h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, libero quae distinctio, id repellat atque quia, illo iure aliquam cupiditate laudantium? Corrupti magnam aliquid porro illo excepturi blanditiis enim quae?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, libero quae distinctio, id repellat
+                atque quia, illo iure aliquam cupiditate laudantium? Corrupti magnam aliquid porro illo excepturi
+                blanditiis enim quae?
             </p>
         </article>
     </section>
@@ -60,14 +70,11 @@
             <figcaption>Pie de imagen</figcaption>
         </figure>
     </section>
-    <iframe 
-        width="400" 
-        height="200" 
-        src="https://www.youtube.com/embed/0yruvXjYoUo" 
-        frameborder="0"
+    <iframe width="400" height="200" src="https://www.youtube.com/embed/0yruvXjYoUo" border="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <footer>
 
     </footer>
 </body>
+
 </html>
