Modificación con el formulario de contacto

--- a/cv/index.html
+++ b/cv/index.html
@@ -12,13 +12,13 @@
     <header>
         <nav>
             <li><a href="#inicio">Home</a></li>
-            <li><a href="#servicios">Services</a></li>
-            <li><a href="#acerca-de">About</a></li>
-            <li><a href="#proyectos">Proyects</a></li>
-            <li><a href="#contacto">Contact</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Proyects</a></li>
+            <li><a href="#contact">Contact</a></li>
         </nav>
     </header>
-    <section id="servicios">
+    <section id="services">
         <h1>Have a look at my Services</h1>
         <article>
             <img src="img//s1.webp" alt="Web Design">
@@ -57,21 +57,41 @@
             </p>
         </article>
     </section>
-    <section id="acerca-de">
+    <section id="about">
         <h1>About Myselg</h1>
     </section>
-    <section id="proyectos">
-        <h1>My Qualificacions</h1>
-    </section>
-    <section id="contacto">
-        <h1>Latest Done Projects</h1>
-        <figure>
+    <section id="projects">
+        <h1>My Lastest Projects</h1>
+       <!--  <figure>
             <img src="img/l1.webp" alt="Panda">
             <figcaption>Pie de imagen</figcaption>
         </figure>
-    </section>
-    <iframe width="400" height="200" src="https://www.youtube.com/embed/0yruvXjYoUo" border="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="400" height="200" src="https://www.youtube.com/embed/0yruvXjYoUo" border="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        </iframe> -->
+    <section id="contact">
+        <h1>Contacto</h1>
+        <form action="" id="contact-form">
+            <p>
+                <label for="form-name">Nombre:</label>
+                <input type="text" name="form-name" id="form-name">
+            </p>
+            <p>
+                <label for="form-email">e-mail:</label>
+                <input type="email" name="form-email" id="form-email">
+            </p>
+            <p>
+                <label for="form-subject">Asunto:</label>
+                <input type="text" name="form-subject" id="form-subject">
+            </p>
+            <p>
+                <label for="form-message">Mensaje:</label>
+                <textarea name="form-message" id="form-message" cols="30" rows="10"></textarea>
+            </p>
+            <p>
+                <input type="submit" value="Enviar">
+            </p>
+        </form>
     <footer>
 
     </footer>
