Empezamos con CSS

--- a/cv/index.html
+++ b/cv/index.html
@@ -6,6 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>FrontEnd Developer</title>
+
+    <style>
+
+        h2 a {
+            color: aquamarine;
+        }
+  
+        #contact {
+            background-color: antiquewhite;
+        }
+
+        .letra-arial {
+            font-family: Arial, Helvetica, sans-serif;
+            font-style: italic;
+            font-size: 70%
+        }
+
+        * {
+            font-family: 'Courier New', Courier, monospace;
+        }
+        
+        #contact > h1 {
+            color: chartreuse;
+        }
+    </style>
 </head>
 
 <body>
@@ -20,7 +45,7 @@
     </header>
     <section id="services">
         <h1>Have a look at my Services</h1>
-        <article>
+        <article class="letra-arial">
             <img src="img//s1.webp" alt="Web Design">
             <h2><a href="#">Web Design</a></h2>
             <p>
