primera fase con juego de tronos

--- a/cv/index.html
+++ b/cv/index.html
@@ -6,47 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>FrontEnd Developer</title>
-
-    <style>
-
-        h2 a {
-            color: aquamarine;
-        }
-  
-        #contact {
-            background-color: antiquewhite;
-        }
-
-        .letra-arial {
-            font-family: Arial, Helvetica, sans-serif;
-            font-style: italic;
-            font-size: 70%
-        }
-
-        * {
-            font-family: 'Courier New', Courier, monospace;
-        }
-        
-        #contact > h1 {
-            color: chartreuse;
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <header>
-        <nav>
-            <li><a href="#inicio">Home</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Proyects</a></li>
-            <li><a href="#contact">Contact</a></li>
+    <nav class="navbar">
+            <ul class="navbar-list">
+                <li class="navbar-item"><a href="#home">Home</a></li>
+                <li class="navbar-item"><a href="#services">Services</a></li>
+                <li class="navbar-item"><a href="#about">About</a></li>
+                <li class="navbar-item"><a href="#projects">Proyects</a></li>
+                <li class="navbar-item"><a href="#contact">Contact</a></li>
+            </ul>
         </nav>
+
+    <header class="header">
+       <h1>Hola, soy
+           <span>Santi</span>
+           Antes conocido como (Santi the KeyCoder!!!)</h1>
+        <div class="header-image"></div>
+        <p class="tagline">
+            Bastardo de Ned Stark, líder de la Guardia de la noche proclamado
+            Rey en el Norte, y ahora leal escudero de Daenerys Targaryen.
+        </p>
+
     </header>
+
     <section id="services">
         <h1>Have a look at my Services</h1>
         <article class="letra-arial">
-            <img src="img//s1.webp" alt="Web Design">
+            <img src="img/s1.webp" alt="Web Design">
             <h2><a href="#">Web Design</a></h2>
             <p>
                 Lorem ipsum <strong>esto es strong</strong> elit. Nostrum, libero quae distinctio, <em>tambien con
@@ -55,7 +44,7 @@
             </p>
         </article>
         <article>
-            <img src="img//s2.webp" alt="Mobile Design">
+            <img src="img/s2.webp" alt="Mobile Design">
             <h2><a href="#">Mobile Design</a></h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, libero quae distinctio, id repellat
@@ -64,7 +53,7 @@
             </p>
         </article>
         <article>
-            <img src="img//s3.webp" alt="Print Design">
+            <img src="img/s3.webp" alt="Print Design">
             <h2><a href="#">Print Design</a></h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, libero quae distinctio, id repellat
@@ -73,7 +62,7 @@
             </p>
         </article>
         <article>
-            <img src="img//s4.webp" alt="Interaction Design">
+            <img src="img/s4.webp" alt="Interaction Design">
             <h2><a href="#">Interaction Design</a></h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, libero quae distinctio, id repellat
